fix: horizontal scrollbar on bottom of website

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ body {
     /* Flexbox items align from top */
     flex-direction: column;
     /* Stack sections vertically */
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     max-width: 1500px;
     margin: 0 auto;
